ontol/ontol-compiler/test-cases/error/repr/disjoint_intersection1.on
def meters (rel .is: number)

def my_length ( // ERROR Intersection of disjoint types
    rel .is: meters // NOTE Base type is `ontol.number`
    rel .is: text // NOTE Base type is `ontol.text`
)
